1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (java_ensure_selector): Use unsigned for `pos'
	argument to addstr to avoid potential confusion with %u.

	* DefObject.m ([Object_s -forward::]): Declare alloca.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* make-h2x: Instead of unsetting externvar, set disable_externvar
	so that externvar can be disabled in externvar.h.

	* defobj.h: Import externvar.h.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Arguments.m (arguments): Add externvardef.

	* Program.m (_obj_{globalZone,sessionZone,scratchZone}): Add
	externvardef.

	* defobj.m (_obj_debug, _obj_xerror, _obj_xdebug):
	Add externvardef.
	(t_Object, t_ByteArray): Remove.

	* Archiver.m (hdf5Archiver, lispArchiver, hdf5AppArchiver,
	lispAppArchiver):  Add externvardef.

	* make-h2x: Handle externvar and externvardef.

	* defobj.h: Use `externvar' for external variable declarations.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-05-24  Alex Lancaster  <alex@santafe.edu>

	* make-h2x: Modify sed script that generates the .xm+ file, to
	only output lines that have id<{Symbol,Warning,Error,Event}> if
	prefaced by `extern'.  This avoids the problem of
	misinterpretation of methods that take or return an argument that
	have casts to id<{Symbol,Warning,Error,Event}>, as symbols.

1999-05-20  Alex Lancaster  <alex@santafe.edu>

	* directory.[hm]: Protect Java-specific code with HAVE_JDK
	#ifdef's.

	* defobj.h: Declare extern {lisp,hdf5}AppArchiver.
	(Archiver): Add -setDefaultApp{Lisp,HDF5}Path to protocol
	definition.

	* defobj.m (initDefobj): Create singleton instances of
	{lisp,hdf5}AppArchiver.

	* Archiver.[hm] ([Archiver_c -setDefaultAppLispPath]): New method
	to set the default path name for the lispAppArchiver, use
	defaultAppPath.
	
	* Archiver.[hm] ([Archiver_c -setDefaultAppHDF5Path]): Likewise