@@ -1,3 +1,8 @@
+1999-06-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Arguments.[hm]: Include swarmconfig.h.  Include argp.h or
+	misc/argp.h depending on HAVE_ARGP_H.
+
 1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* directory.m (java_ensure_selector): Use unsigned for `pos'
